--- a/.isort.cfg
+++ b/.isort.cfg
@@ -7,10 +7,10 @@ combine_as_imports=True
 
 default_section=THIRDPARTY
 
-known_first_party=api,polls,sandbox
+known_first_party=api,polls,sandbox,tests
 known_django=django
 
-sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 force_sort_within_sections=True
 
