--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,4 +12,4 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4
     - name: run
-      run: docker-compose run api-test
+      run: docker-compose run app-test
