--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,7 @@
 Django==4.2
+django-debug-toolbar==4.3.0
 django-extensions==3.2.3
 django-filter==24.2
 djangorestframework==3.15.1
+Faker==25.0.1
 Markdown==3.6
